# persona-book

./: .env.dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
langchain-server/: API_SPECIFICATION.md  Dockerfile  Dockerfile.elasticsearch  RAG_API_DOCUMENTATION.md  README.md  chat_api_test_results.json  env.example  keywords.json  pyproject.toml  test_chat_api.py  test_fast_question.py  test_rag_apis.py
langchain-server/app/: main.py
langchain-server/app/agents/: learning_agent.py
langchain-server/app/api/: __init__.py  answer_evaluation_api.py  chat.py  chat_history.py  concept_explanation_api.py  dependencies.py  enhanced_local_question_generator.py  evaluating_answer_api.py  generating_additional_question_api.py  generating_question_api.py  learning.py  local_question_generator.py  openai_chat.py  page_search_api.py  page_search_new_api.py  pdf_upload_api.py  ping.py  question_generation_api.py  question_generator.py  question_generator.py.bak  reexplaining_concept_api.py  unified_chat_api.py
langchain-server/app/core/: __init__.py  chains.py  config.py  elasticsearch_client.py  vector_store.py
langchain-server/app/data/: keywords.json  keywords_detailed.json  keywords_detailed.py
langchain-server/app/entity/: __init__.py  chat_history.py  learning_material.py
langchain-server/app/generators/: question_generator.py
langchain-server/app/repository/: __init__.py  chat_history_repository.py  learning_material_repository.py
langchain-server/app/schemas/: __init__.py  chat.py  enum.py  openai_chat.py  tool_input.py
langchain-server/app/services/: __init__.py  cache_service.py  crawler.py  embedding_service.py  learning_service.py  (+10 more)
langchain-server/cache/: javajungsuk4_sample.pdf_1753717983.080594_5.pkl
langchain-server/대화테스트/: main.py
langchain-server/승민테스트/: main.py
(+179 files in other folders)
